# snowball-py

./: .gitignore  README.md  main.py  pyproject.toml
snowball/: __init__.py  benchmark.py  cli.py  data.py  engine.py  graphs.py  optimiser.py  simulator.py
tests/: test_e2e.py
